@@ -46,7 +46,7 @@ $Mj::Config::default_string = q(
  'delivery_rules'       => [],
  'description'          => undef,
  'description_long'     => [],
- 'digests'              => [],
+ 'digests'              => {},
  'digest_index_format'  => 'default',
  'subscribe_policy'     => "open+confirm",
  'unsubscribe_policy'   => "open",
